@@ -57,8 +57,8 @@
 
 (in-package :clfswm)
 
-(ignore-errors
-  (main :read-conf-file-p t))
+;;(ignore-errors
+  (main :read-conf-file-p t);)
 
 
 ;;;; Uncomment lines above to save the default documentation.
